--- a/clsTableFilter.cls
+++ b/clsTableFilter.cls
@@ -1,15 +1,28 @@
+VERSION 1.0 CLASS
+BEGIN
+  MultiUse = -1  'True
+END
+Attribute VB_Name = "clsTableFilter"
+Attribute VB_GlobalNameSpace = False
+Attribute VB_Creatable = False
+Attribute VB_PredeclaredId = False
+Attribute VB_Exposed = False
 Option Explicit
 
 Public WithEvents lbl_ As MSForms.Label
+Attribute lbl_.VB_VarHelpID = -1
 Public WithEvents txt_ As MSForms.TextBox
+Attribute txt_.VB_VarHelpID = -1
 Public WithEvents chk_ As MSForms.CheckBox
-Private frm_ As UserForm1
+Attribute chk_.VB_VarHelpID = -1
+Private table_filter_ As IFormTableFilter
+Attribute table_filter_.VB_VarHelpID = -1
 
 Public control_index_ As Integer
 Public column_index_ As Integer
 
-Public Sub Init(ByRef frm As UserForm1, ByRef lbl As MSForms.Label, ByRef txt As MSForms.TextBox, ByRef chk As MSForms.CheckBox, ByVal column_index As Integer)
-    Set frm_ = frm
+Public Sub Init(ByRef table_filter As IFormTableFilter, ByRef lbl As MSForms.Label, ByRef txt As MSForms.TextBox, ByRef chk As MSForms.CheckBox, ByVal column_index As Integer)
+    Set table_filter_ = table_filter
     Set lbl_ = lbl
     Set txt_ = txt
     Set chk_ = chk
@@ -22,16 +35,10 @@ Public Sub Clear()
     chk_.Value = False
 End Sub
 
-Private Sub Class_Initialize()
-    Static instances As Integer
-    instances = instances + 1
-    control_index_ = instances
-End Sub
-
 Private Sub txt__Change()
-    frm_.TextboxChange txt_, control_index_, column_index_
+    table_filter_.TextboxChange txt_, control_index_, column_index_
 End Sub
 
 Private Sub chk__Click()
-    frm_.CheckboxClick chk_, control_index_, column_index_
+    table_filter_.CheckboxClick chk_, control_index_, column_index_
 End Sub
