--- a/clsMonitorTableFilter.cls
+++ b/clsMonitorTableFilter.cls
@@ -17,14 +17,11 @@ Public Sub Initialize(ByRef tableWorksheet As Worksheet)
     ' If multiple columns are added to the same controls group
     ' filter is splitted on space char. First part of the filter is applied to the first specified column
     ' and second part of the filter is applied to the second specified column
-    Dim columnsMapping(1 To 2) As Collection
+    Dim columnsMapping(1 To 1) As Collection
     Set columnsMapping(1) = New Collection
-    Set columnsMapping(2) = New Collection
 
     columnsMapping(1).Add 1
     columnsMapping(1).Add 2
-
-    columnsMapping(2).Add 3
 
     Set sourceTableWS_ = tableWorksheet
     Set frm = New frmTableFilter
@@ -36,6 +33,10 @@ End Sub
 Private Sub frm_AcceptSelection(ByVal selected_row As Integer)
     Dim rng As Range
     Set rng = Application.ActiveCell
+    
+    If selected_row = 0 Then
+        Exit Sub
+    End If
 
     rng.Value = sourceTableWS_.Cells(selected_row, 5)
     rng.Offset(1, 0).Activate
